# admux

./: Cargo.toml  README.md
docs/: detailed-status.md  implementation-log.md
docs/wiki/: Architecture.md  CLI-Reference.md  Configuration-Reference.md  Home.md  Keybindings-and-Interactive-Commands.md  Troubleshooting.md  Workspace-Manifests.md  Workspace-Snapshots-and-Restore.md
src/: buffer.rs  cli.rs  client.rs  clipboard.rs  commands.rs  config.rs  copy_mode.rs  input.rs  ipc.rs  layout.rs  lib.rs  pane.rs  paths.rs  persistence.rs  pty.rs  render.rs  server.rs  session.rs  test_support.rs  window.rs  workspace.rs
tests/: cli_smoke.rs  daemon_cli.rs
