[package]
name = "admux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
crossterm = "0.28.1"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.5"
vt100 = "0.16.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
